# icb-classproperties

./: CHANGELOG.md  README.md  pyproject.toml
clsproperties/: __init__.py
