[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clsproperties"
authors = [ { name = "Isaac Bell" } ]
dynamic = ["version"]
description = "Provides classproperty objects for controlled access to class attributes."
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"
license-files = [ "LICENSE.txt" ]

keywords = [
    "python",
    "python3",
    "python-3",
    "python-library",
    "python-package",
    "python-module",
    "pypi",
    "class",
    "metaclass",
    "attribute",
    "attributes",
    "classattribute",
    "classattributes",
    "property",
    "properties",
    "classproperty",
    "classproperties",
    "descriptor",
    "getter",
    "setter",
    "deleter",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Source = "https://github.com/icb08/clsproperties"
Documentation = "https://github.com/icb08/clsproperties/wiki"
Issues = "https://github.com/icb08/clsproperties/issues"
Changelog = "https://github.com/icb08/clsproperties/blob/main/CHANGELOG.md"
License = "https://github.com/icb08/clsproperties/blob/main/LICENSE

[tool.hatch.version]
path = "clsproperties/__init__.py"

# [project.optional-dependencies] \n colors = ["colorama>=0.4"]
